* multiple fixes on response states * core/Element.attr() and .data() return undefined if no key found * widget visibility : [data-edit] display : none
git-svn-id: http://vcs.taotesting.com/svn/oat/projects/taoQtiItem/trunk@20272 62dfeb86-a93f-4914-9d13-15c0a160985d

--- a/views/scss/item-creator.scss
+++ b/views/scss/item-creator.scss
@@ -874,7 +874,7 @@
             background-color:#eee;
         }
         [data-edit] {
-            /*display: none;*/
+            display: none;
             & > [class*=" col-"], [class^="col-"] {
                 margin-bottom: 0 !important;
             }
